@@ -1,15 +1,11 @@
 # Generated by buildout
 coverage==3.7.1
-pyrepl==0.8.4
 py==1.4.26
 pyflakes==0.8.1
 pep8==1.5.7
 pytest==2.6.4
 cov-core==1.15.0
 execnet==1.2.0
-fancycompleter==0.4
-wmctrl==0.1
-Pygments==2.0.1
 python-dateutil==2.3
 six==1.8.0
 setuptools==7.0
@@ -20,6 +16,5 @@ pytest-cov==1.8.1
 pytest-timeout==0.4
 pytest-cache==1.0
 requests==2.5.0
-pdbpp==0.7.2
 xmlrpc2==0.3.1
 bandersnatch==1.8.dev0
